--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Run Pint
         run: vendor/bin/pint
 
+      - name: Run PHPStan
+        run: composer run analyse
+
       # - name: Commit Changes
       #   uses: stefanzweifel/git-auto-commit-action@v5
       #   with:
